src/snapshots/tptp__top__tests__annotated_formula-5.snap
---
source: src/top.rs
expression: parsed
---
Cnf(
    CnfAnnotated(
        Annotated {
            name: AtomicWord(
                Lower(
                    LowerWord(
                        "test",
                    ),
                ),
            ),
            role: FormulaRole(
                LowerWord(
                    "axiom",
                ),
            ),
            formula: Disjunction(
                Disjunction(
                    [
                        Atomic(
                            Defined(
                                Plain(
                                    DefinedPlainFormula(
                                        Constant(
                                            DefinedConstant(
                                                DefinedFunctor(
                                                    AtomicDefinedWord(
                                                        DollarWord(
                                                            LowerWord(
                                                                "true",
                                                            ),
                                                        ),
                                                    ),
                                                ),
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ],
                ),
            ),
            annotations: Annotations(
                None,
            ),
        },
    ),
)
