src/snapshots/tptp__top__tests__annotated_formula.snap
---
source: src/top.rs
expression: parsed
---
Tfx(
    TfxAnnotated(
        Annotated {
            name: AtomicWord(
                Lower(
                    LowerWord(
                        "test",
                    ),
                ),
            ),
            role: FormulaRole(
                LowerWord(
                    "axiom",
                ),
            ),
            formula: Logic(
                Unitary(
                    Atomic(
                        Defined(
                            DefinedAtomic(
                                Constant(
                                    DefinedConstant(
                                        DefinedFunctor(
                                            AtomicDefinedWord(
                                                DollarWord(
                                                    LowerWord(
                                                        "true",
                                                    ),
                                                ),
                                            ),
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
            annotations: Annotations(
                None,
            ),
        },
    ),
)
