src/snapshots/tptp__top__tests__annotations-3.snap
---
source: src/top.rs
expression: parsed
---
Annotations(
    Some(
        (
            Source(
                Data(
                    Atomic(
                        Lower(
                            LowerWord(
                                "c",
                            ),
                        ),
                    ),
                ),
            ),
            OptionalInfo(
                None,
            ),
        ),
    ),
)
