src/snapshots/tptp__top__tests__annotations-5.snap
---
source: src/top.rs
expression: parsed
---
Annotations(
    Some(
        (
            Source(
                Data(
                    Atomic(
                        Lower(
                            LowerWord(
                                "c",
                            ),
                        ),
                    ),
                ),
            ),
            OptionalInfo(
                Some(
                    UsefulInfo(
                        GeneralList(
                            Some(
                                GeneralTerms(
                                    [
                                        Data(
                                            Variable(
                                                Variable(
                                                    UpperWord(
                                                        "X",
                                                    ),
                                                ),
                                            ),
                                        ),
                                    ],
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ),
)
