src/snapshots/tptp__top__tests__formula_data-3.snap
---
source: src/top.rs
expression: parsed
---
Fof(
    Formula(
        Unitary(
            Atomic(
                Plain(
                    PlainAtomicFormula(
                        Constant(
                            Constant(
                                Functor(
                                    Lower(
                                        LowerWord(
                                            "p",
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ),
)
